# gameOLifeGL

./: CMakeLists.txt  glad.c  helloworld  helloworld.cpp  main.cpp
include/: compute_shader_program.h  shader_program.h  vf_shader_program.h
include/glad/: glad.h
src/: compute_shader_program.cpp  glad.c  shader_program.cpp  vf_shader_program.cpp
src/shaders/: computeShader.comp  fragmentShader.frag  gridVert.vert  vert.vert  vertexShader.vert
